index.css
.dropdown-item {
  color: rgba(255, 255, 255, 0.55);
}
.dropdown-item:hover {
  color: rgba(255, 255, 255, 0.75);
  background-color: transparent;
}

.dropdown-item.active {
  color: #fff;
  background-color: transparent;
}

div#container {
  margin-left: auto;
  margin-right: auto;
  background: #ff9;
  width: 80%;
}

@media only screen and (hover: hover) and (pointer: fine) and (min-width: 992px) {
  .dropdown:hover .dropdown-menu {
    display: block;
  }
}
@media only screen and (max-width: 992px) {
  .collapse {
    margin-left: 10px;
  }
}

